[gd_scene load_steps=4 format=1]

[ext_resource path="res://widgets/control_widget/control_widget.gd" type="Script" id=1]
[ext_resource path="res://widgets/control_widget/main_gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://widgets/control_widget/config_gui.tscn" type="PackedScene" id=3]

[node name="widget" type="Node"]

script/script = ExtResource( 1 )

[node name="main_canvas" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 200.0

[node name="main_gui" parent="main_canvas" instance=ExtResource( 2 )]

[node name="config_canvas" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 400.0

[node name="config_gui" parent="config_canvas" instance=ExtResource( 3 )]


